--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div id="todo-container">
     <div id="todo-list">
-        <li *ngFor="let todo of todos">{{todo.todo}}</li>
+        <li *ngFor="let todo of todos | async">{{todo.todo}}</li>
     </div>
     <div id="todo-form" class="form-group" [formGroup]="form">
         <input type="text" class="form-control" formControlName="todo" (keyup.enter)="addTodo()" placeholder="add to-do item…">
