--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -1,15 +1,11 @@
 <div id="form-container" [formGroup]="form">
     <h1>Sign-in</h1>
-    <div class="form-group">
-        <!-- <label for="formGroupExampleInput">Example label</label> -->
-        <input type="text" formControlName="email" class="form-control" id="formGroupExampleInput" placeholder="Email">
-    </div>
-    <div class="form-group">
-        <!-- <label for="formGroupExampleInput2">Another label</label> -->
-        <input type="password" formControlName="password" class="form-control" id="formGroupExampleInput2" placeholder="Password">
-    </div>
-    <button class="btn btn-primary" (click)="authenticate()" type="button">Login Now</button>
+    <mat-form-field class="example-full-width">
+        <input matInput type="email" formControlName="email" placeholder="Email">
+    </mat-form-field>
+    <mat-form-field class="example-full-width">
+        <input matInput type="password" formControlName="password" placeholder="Password">
+    </mat-form-field>
+    
+    <button mat-button (click)="authenticate()" type="button">Login Now</button>
 </div>
-<!-- <div class="form-group">
-    <button class="btn btn-primary" type="button">Signin</button>
-</div> -->
