--- a/src/app/components/todo/todo.component.scss
+++ b/src/app/components/todo/todo.component.scss
@@ -44,8 +44,11 @@
         position: sticky;
         bottom: 0;
         margin: 0;
+        margin: 10px;
+        justify-content: space-between;
         mat-form-field {
-            flex: 1;
+            flex: 0.45;
+
         }
 
         mat-input {
@@ -55,7 +58,7 @@
         }
 
         button {
-            border-radius: 0;
+            // border-radius: 0;
         }
     }
 }
