--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -1,36 +1,31 @@
 <app-header></app-header>
-<div id="todo-container">
+<div id="todos-container">
     <div id="todo-list" *ngIf="todos">
-        <ng-container *ngFor="let todos of todos | keyvalue">
-            <mat-selection-list 
-                cdkDropList class="list" 
-                [cdkDropListData]="todos.value" 
-                (cdkDropListDropped)="drop($event, todos.value)">
-                <h3 matSubheader *ngIf="todos.key !== 'null'">
-                    {{todos.key | amCalendar:{sameDay:'[Same Day at] h:mm '} }}
-                </h3>
-                <h3 matSubheader *ngIf="todos.key === 'null'">No Due Date</h3>
+        <ng-container *ngFor="let day of todos; let dayindex = index;">
+            <div id="{{day.id}}" class="list" 
+            [cdkDropListData]="day.list"
+            (cdkDropListDropped)="drop($event, day.list, day.id)"
+            [cdkDropListConnectedTo]="connectedTo"
+            cdkDropList>
+                <h3 matSubheader *ngIf="day.id !== 'null'">{{day.id | amCalendar:{sameDay:'[Today]'} }}</h3>
+                <h3 matSubheader *ngIf="day.id === 'null'">No Due Date</h3>
 
-                <mat-list-option cdkDrag *ngFor="let todo of todos.value" [selected]="todo.completed" (click)="markAsCompleted(todo)">
-                    <div class="todo-detail">
-                        <span mat-line>{{todo.todo}}</span>
+                <div class="drop-zone">
+                    <div cdkDrag class="todo-container mat-elevation-z2" cdkDragLockAxis="y" *ngFor="let todo of day.list">
+                        <button mat-icon-button cdkDragHandle class="drag"><mat-icon>drag_handle</mat-icon></button>
+                        <button mat-icon-button (click)="markAsCompleted(todo)"><mat-icon>{{todo.completed ? 'check_box' : 'check_box_outline_blank'}}</mat-icon></button>
+                        <div class="todo-detail">
+                            <span mat-line>{{todo.todo}}</span>
+                        </div>
+                        <!-- <span class="spacer"></span> -->
+                        <button mat-icon-button mat-datepicker-toggle><mat-icon>today</mat-icon></button>
+                        <button mat-icon-button (click)="deleteTodo($event, day.id)"><mat-icon>delete</mat-icon></button>
+                        <div class="example-custom-placeholder" *cdkDragPlaceholder></div>
                     </div>
-                    <button mat-icon-button mat-datepicker-toggle><mat-icon>today</mat-icon></button>
-                    <button mat-icon-button (click)="deleteTodo($event, todo.id)"><mat-icon>delete</mat-icon></button>
-                </mat-list-option> 
-            </mat-selection-list>
-        </ng-container>
-            
-            <!-- <h3 matSubheader>Today</h3>
-            <mat-list-option cdkDrag *ngFor="let todo of todos | keyvalue" (click)="markAsCompleted(todo)" [selected]="todo.completed">
-                <div class="todo-detail">
-                    <span mat-line>{{todo.key}}</span>
-                    <span mat-line>{{todo,value | json}}</span>
-                    <span mat-line>{{todo}}</span>
-                    <span mat-line>{{todo}}</span>
+                    <div [ngClass]="{'no-items': !day.list.length}" *ngIf="!day.list.length"><span>No tasks to do on this day</span></div>
                 </div>
-                <button mat-icon-button (click)="deleteTodo($event, todo.id)"><mat-icon>delete</mat-icon></button>
-            </mat-list-option> -->
+            </div>
+        </ng-container>
         <mat-divider></mat-divider>
     </div>
     <div id="no-items" *ngIf="!todos">
