--- a/src/app/components/todo/todo.component.scss
+++ b/src/app/components/todo/todo.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
-    div#todo-container {
+    div#todos-container {
         display: flex;
         flex-direction: column;
         // justify-content: center;
@@ -16,22 +16,43 @@
             flex: 1;
             flex-direction: column;
             padding: 40px;
-       
-                // border: solid 1px #ccc;
 
-            mat-selection-list ::ng-deep {
-                div.mat-list-text {
-                    align-items: center;
-                    flex-direction: row;
-                    div.todo-detail {
-                        flex: 1;
+            > div.list > div.drop-zone{
+                // border: 1px dashed red;
+                background-color: white;
+                min-height: 100px;
+                transition: height 250ms cubic-bezier(0.23, 1, 0.320, 1);
+
+                > div.todo-container {
+                    display: flex;
+
+                    button.drag {
+                        cursor: grab;
                     }
+
+                    > div.todo-detail {
+                        display: flex;
+                        align-items: center;
+                        flex: 1 1 auto;
+                        padding: 0 12px;
+                    }
+                }
+
+                >div.no-items {
+                    height: 100px;
+                    background-color: #cacaca;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
                 }
             }
 
-                
-            
-            
+            .example-custom-placeholder {
+                background: #ccc;
+                border: dotted 3px #999;
+                min-height: 60px;
+                transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+            }
         }
 
         div#no-items {
@@ -69,5 +90,26 @@
         button {
             // border-radius: 0;
         }
+    }
+
+    .cdk-drag-preview {
+        box-sizing: border-box;
+        border-radius: 20px;
+        
+        box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+                    0 8px 10px 1px rgba(0, 0, 0, 0.14),
+                    0 3px 14px 2px rgba(0, 0, 0, 0.12);
+    }
+    .cdk-drag-animating {
+        transition: transform 450ms cubic-bezier(0, 0, 0.2, 1);
+    }
+
+    .cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
+        transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+        border: 2px solid red;
+    }
+
+    .spacer {
+        flex: 1 1 auto;
     }
 }
