--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,24 @@ body {
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+
+
+
+
+// Drag and drop animation settings
+.cdk-drag-animating {
+    transition: transform 450ms cubic-bezier(0, 0, 0.2, 1);
+}
+
+// .cdk-drag-dragging {
+//     display: flex;
+//     // transition: transform 450ms cubic-bezier(0, 0, 0.2, 1);
+// }
+
+.cdk-drag-preview {
+    background-color: white;
+    display: flex;
+
+}
