--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -7,26 +7,23 @@
             (cdkDropListDropped)="drop($event, day.list, day.id)"
             [cdkDropListConnectedTo]="connectedTo"
             cdkDropList>
-                <h3 matSubheader *ngIf="day.id !== 'null'">{{day.id | amCalendar:{sameDay:'[Today]'} }}</h3>
-                <h3 matSubheader *ngIf="day.id === 'null'">No Due Date</h3>
+                <h3 matSubheader [ngClass]="{'past': checkPast(day.id)}" *ngIf="day.id !== 'null'">{{day.id | amLocale:'en-GB' | amDateFormat:'LL' }}</h3>
+                <h3 matSubheader [ngClass]="{'past': checkPast(day.id)}" *ngIf="day.id === 'null'">No Due Date</h3>
 
                 <div class="drop-zone">
                     <div cdkDrag class="todo-container mat-elevation-z2" cdkDragLockAxis="y" *ngFor="let todo of day.list">
                         <button mat-icon-button cdkDragHandle class="drag"><mat-icon>drag_handle</mat-icon></button>
                         <button mat-icon-button (click)="markAsCompleted(todo)"><mat-icon>{{todo.completed ? 'check_box' : 'check_box_outline_blank'}}</mat-icon></button>
-                        <div class="todo-detail">
-                            <span mat-line>{{todo.todo}}</span>
-                        </div>
-                        <!-- <span class="spacer"></span> -->
-                        <button mat-icon-button mat-datepicker-toggle><mat-icon>today</mat-icon></button>
-                        <button mat-icon-button (click)="deleteTodo($event, day.id)"><mat-icon>delete</mat-icon></button>
+                        <div class="todo-detail"><span mat-line>{{todo.todo}}</span></div>
+                        <!-- <button mat-icon-button mat-datepicker-toggle><mat-icon>today</mat-icon></button> -->
+                        <button mat-icon-button (click)="deleteTodo($event, todo.id)"><mat-icon>delete</mat-icon></button>
                         <div class="example-custom-placeholder" *cdkDragPlaceholder></div>
                     </div>
                     <div [ngClass]="{'no-items': !day.list.length}" *ngIf="!day.list.length"><span>No tasks to do on this day</span></div>
                 </div>
             </div>
         </ng-container>
-        <mat-divider></mat-divider>
+        <!-- <mat-divider></mat-divider> -->
     </div>
     <div id="no-items" *ngIf="!todos">
         <img src="assets/Icon-no-todo-items.png" alt="">
