--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,6 +5,10 @@
         <mat-icon>more_vert</mat-icon>
     </button>
     <mat-menu #menu="matMenu">
+        <button mat-menu-item  (click)="openProfile()">
+            <mat-icon>person</mat-icon>
+            <span>Edit Profile</span>
+        </button>
         <button mat-menu-item (click)="signOut()">
             <mat-icon>exit_to_app</mat-icon>
             <span>Logout</span>
