--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -1,20 +1,21 @@
 :host {
     display: flex;
-    justify-content: center;
-    align-content: center;
-    height: 100vh;
     flex-direction: column;
-    > div#form-container {
+    // height: 100vh;
+    form#form-container {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        // width: 100%;
         h1 {
             text-align: center;
         }
         display: flex;
         flex-direction: column;
-        align-self: center;
-        width: 300px;
-
+        // width: 300px;
+    
         button{
-            width: 50%;
+            // width: 50%;
             margin: 0 auto;
             text-transform: uppercase;
         }
