--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -11,5 +11,5 @@
 </div>
 <div mat-dialog-actions>
     <button mat-button (click)="onNoClick()" [disabled]="form.invalid">Cancel</button>
-    <button mat-button cdkFocusInitial (click)="setProfile()" [disabled]="form.invalid">Save</button>
+    <button mat-button (click)="setProfile()" [disabled]="form.invalid">Save</button>
 </div>
