--- a/src/app/components/todo/todo.component.scss
+++ b/src/app/components/todo/todo.component.scss
@@ -61,6 +61,21 @@
                         align-items: center;
                         flex: 1 1 auto;
                         padding: 0 12px;
+
+                        .what {
+                            flex: 1;
+                        }
+
+                        .who {
+                            flex: 0.5;
+                            display: flex;
+                            flex-direction: row;
+                            align-items: center;
+
+                            mat-icon {
+                                margin-right: 5px;
+                            }
+                        }
                     }
                 }
 
@@ -95,6 +110,12 @@
     mat-card#todo-form {
         display: flex;
         flex-direction: row;
+        > div {
+            display: flex;
+            flex: 1;
+            flex-direction: column;
+            margin-right: 20px;
+        }
         // flex: 1;
         border-radius: 0px;
         position: sticky;
@@ -102,8 +123,18 @@
         margin: 0;
         margin: 10px;
         justify-content: space-between;
+        align-items: center;
         mat-form-field {
             flex: 0.45;
+
+        }
+        @media screen and (min-width: 550px) {
+            > div {
+                flex-direction: row;
+
+                justify-content: space-evenly;
+
+            }
 
         }
 
